rnsc/test_data/rns_integration/error/lexer/directives/dot_semicolon_comment.rns
.method
    ; real comment
    .;not_comment ;this is also a comment
.method_end